k8s_deployments/gitea/gitea-netpol.yml
# This Policy ensures that the pod can access only the resources it's meant to
# and is hit by traffic coming from the reverse proxy only
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: gitea
  namespace: default
spec:
  selector: app == 'gitea'
  ingress:
  - source:  # Allowing connections from the reverse proxy
      selector: app.kubernetes.io/name == 'traefik'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
    destination:
      ports:
      - gitea-ui
      - gitea-ssh
    protocol: TCP
    action: Allow
  egress:
  - destination:
      nets:
      - 1.2.3.4/32  # mysql db
      ports:
      - 3305
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1.2.3.4/32  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1:2:3:4::5/128  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: UDP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: TCP
    action: Allow
